--- a/ad3.html
+++ b/ad3.html
@@ -116,11 +116,20 @@
             <script type='text/javascript' src='//pl27948950.effectivegatecpm.com/35/be/75/35be75afe8ab12dd29a7d8208b3e9100.js'></script>
         </div>
         
+        <!-- Ad Check Button -->
+        <div class="ad-check-container">
+            <div class="instructions" id="instructions">
+                <p>Click the "Check Ads" button below to verify you've viewed the advertisements</p>
+            </div>
+            <button class="ad-check-btn" id="adCheckBtn">
+                <i class="fas fa-search"></i>
+                <span>Check Ads</span>
+                <span class="ad-check-timer" id="adCheckTimer"></span>
+            </button>
+        </div>
+        
         <!-- Download Button -->
         <div class="download-container">
-            <div class="instructions" id="instructions">
-                <p>Scroll down to the bottom of the page and click the download button to continue</p>
-            </div>
             <button class="download-btn locked" id="downloadBtn" disabled>
                 <i class="fas fa-lock"></i>
                 <span>Download</span>
