--- a/redirect.html
+++ b/redirect.html
@@ -43,6 +43,27 @@
             <p>Please wait while we prepare your link...</p>
         </div>
         
+        <div class="ad-container" id="adContainer" style="display: none;">
+            <div class="ad-header">
+                <div class="progress-bar">
+                    <div class="progress" id="progress"></div>
+                </div>
+                <div class="skip-ad" id="skipAd">
+                    <i class="fas fa-forward"></i> Skip Ad
+                </div>
+            </div>
+            <div class="ad-content" id="adContent">
+                <h3>Please wait while we redirect you</h3>
+                <p>You will be redirected to your destination shortly.</p>
+                <div class="countdown-container">
+                    <span id="countdown">15</span> seconds remaining
+                </div>
+            </div>
+            <div class="ad-footer">
+                <p>This advertisement helps us keep our service free</p>
+            </div>
+        </div>
+        
         <div class="error-container" id="errorContainer" style="display: none;">
             <div class="error-icon">
                 <i class="fas fa-exclamation-triangle"></i>
