--- a/dashboard.html
+++ b/dashboard.html
@@ -92,6 +92,7 @@
                         <div class="custom-domain">
                             <label for="customDomain">Custom Domain:</label>
                             <select id="customDomain">
+                                <option value="krisshdas.github.io">krisshdas.github.io</option>
                                 <option value="linksterror.github.io">linksterror.github.io</option>
                                 <option value="custom.domain.com">custom.domain.com</option>
                             </select>
